fixed header overflow

--- a/client/src/AppHeader.css
+++ b/client/src/AppHeader.css
@@ -1,8 +1,9 @@
 .App-header {
   background-color: #222;
-  height: 20%;
   padding: 20px;
   color: white;
+  display: block;
+  overflow: auto;
 }
 
 .App-title {
